--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "portfoliobackend",
   "version": "1.0.0",
-  "description": "Portfolio backend for Railway deployment",
-  "main": "index.js",
+  "description": "Portfolio backend for Render deployment",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
@@ -14,5 +14,6 @@
     "cors": "^2.8.5"
   }
 }
+
 
 
